--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,11 +18,8 @@ distro==1.9.0
 dnspython==2.8.0
 ecdsa==0.19.1
 email-validator==2.3.0
-emergentintegrations==0.1.0
+email-validator==2.3.0
 fastapi==0.110.1
-fastuuid==0.14.0
-filelock==3.20.3
-flake8==7.3.0
 frozenlist==1.8.0
 fsspec==2026.1.0
 google-ai-generativelanguage==0.6.15
